--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       }
       .day-btn {
         background: #181818;
-        padding: 15px 25px;
+        padding: 15px 40px;
         border-radius: 16px;
         font-weight: 600;
         border: 2px solid transparent;
@@ -307,7 +307,7 @@
       }
       @media (max-width: 600px) {
         .day-btn {
-          padding: 12px 18px;
+          padding: 12px 40px;
           font-size: 0.9rem;
         }
         .workout h2 {
@@ -382,6 +382,16 @@
         .nav-btn span {
           font-size: 0.7rem;
         }
+      }
+      .faq {
+        margin-top: 40px;
+        background: #181818;
+        padding: 20;
+        border-radius: 12px;
+        border: 1px solid #333;
+        max-width: 700px;
+        margin-bottom: 50px;
+        width: 100%;
       }
     </style>
   </head>
@@ -520,11 +530,11 @@
         <i class="fa-solid fa-house"></i>
         <span>Домой</span>
       </div></a>
-      <a href="#"><div class="nav-btn">
+      <a href="motivation.html"><div class="nav-btn">
         <i class="fa-solid fa-image"></i>
         <span>Мотивация</span>
       </div></a>
-      <a href="#"><div class="nav-btn">
+      <a href="profile.html"><div class="nav-btn">
         <i class="fa-solid fa-circle-user"></i>
         <span>Профиль</span>
       </div></a>
