--- a/profile.html
+++ b/profile.html
@@ -180,7 +180,7 @@
 
   <div class="profile">
     <label class="photo-block">
-      <img id="profilePhoto" src="" alt="Фото профиля" />
+      <img id="profilePhoto" src="" />
       <input type="file" id="photoInput" accept="image/*" />
     </label>
 
