--- a/index.html
+++ b/index.html
@@ -534,6 +534,10 @@
         <i class="fa-solid fa-image"></i>
         <span>Мотивация</span>
       </div></a>
+      <a href="character.html"><div class="nav-btn">
+        <i class="fa-solid fa-shield-alt"></i>
+        <span>Характер</span>
+      </div></a>
       <a href="profile.html"><div class="nav-btn">
         <i class="fa-solid fa-circle-user"></i>
         <span>Профиль</span>
