--- a/character.html
+++ b/character.html
@@ -119,7 +119,6 @@
       margin-bottom: 0;
     }
     .principles strong {
-      color: #00e676;
       user-select: none;
     }
     .modal {
@@ -224,6 +223,9 @@
     width: 100%;
     padding: 12px 0;
   }
+  h1 {
+    font-size: 14px;
+  }
 }
 
     .app-nav {
@@ -298,7 +300,7 @@
 
     <div class="counter-block" aria-live="polite" aria-atomic="true">
       <div id="counterText">Побед над собой: 0</div>
-      <button id="addDayBtn"><i class="fa-solid fa-plus"></i> Отметить день силы</button>
+      <button id="addDayBtn"><i class="fa-solid fa-plus"></i> Отметить</button>
     </div>
 
     <div class="log-list" id="logList" aria-label="Лента силы воли">
@@ -306,16 +308,32 @@
 
     <section class="principles" aria-label="Мои принципы">
       <ol>
-        <li><strong>Я не живу по настроению — я живу по дисциплине.</strong><br>Настроение временно. Прогресс — навсегда.</li>
-        <li><strong>Я не пропускаю два дня подряд. Никогда.</strong><br>Один день — ошибка. Два — привычка. Я не даю слабости шанса укорениться.</li>
-        <li><strong>Я не ищу лёгкого пути. Я строю характер, а не оправдания.</strong><br>Мои действия — мой ответ миру.</li>
-        <li><strong>Я уважаю себя делами, а не словами.</strong><br>Никто не должен меня контролировать. Я сам свой надзиратель.</li>
-        <li><strong>Если больно — значит, я расту. Если страшно — значит, это важно.</strong><br>Я не бегу. Я иду навстречу.</li>
+        <li><strong>Я не живу по настроению — я живу по выбору.</strong><br>Слабые ждут вдохновения. Я выбираю вставать, когда никто не видит.
+            Я не жду лучшего времени. Лучшее время — это когда я начал.
+            Каждый раз, когда я преодолел себя — я стал ближе к той версии, которая будет уважать себя без стыда.</li>
+        <li><strong>Я не пропускаю два дня подряд. Никогда.</strong><br>Один день пропустить — это жизнь.
+            Два дня — это уже путь к прежнему мне.
+            Я знаю: если сегодня я проиграю — завтра будет ещё сложнее.
+            Поэтому я выбираю победить сегодня.</li>
+        <li><strong>Я не ищу лёгкого. Я ищу прогресс.</strong><br>У меня нет цели быть комфортным.
+            Моя цель — быть сильным.
+            Я строю характер в каждом повторении, в каждой боли.
+            Там, где другие бросают — я продолжаю. Именно поэтому я другой.
+            </li>
+        <li><strong>Я уважаю себя поступками, а не словами.</strong><br>Слова ничего не стоят, если за ними пустота.
+            Я не нуждаюсь в мотивации извне — я сам себя двигаю.
+            Каждый раз, когда я выбираю сделать — я становлюсь человеком, которому могу доверять.
+            </li>
+        <li><strong>Если мне страшно — я иду туда. Если больно — значит, я расту.</strong><br>Боль — это сигнал. Не чтобы отступить. А чтобы стать больше, чем я есть.
+            Я не бегу от трудностей. Я ломаю их лбом.
+            Пока другие откладывают жизнь — я живу.
+            Каждый день — это экзамен. Не по телу. А по духу.
+            Я не просто тренируюсь — я поднимаю уважение к себе.
+            </li>
       </ol>
     </section>
   </div>
 
-  <!-- Модальное окно -->
   <div class="modal" id="modal" role="dialog" aria-modal="true" aria-labelledby="modalTitle" aria-describedby="modalDesc">
     <div class="modal-content">
       <h2 id="modalTitle" style="color: #00e676; user-select:none;">Что ты преодолел сегодня?</h2>
@@ -413,7 +431,6 @@
 }
 
 function closeModal() {
-  // Для плавного скрытия сделаем анимацию исчезновения
   modal.classList.add('hide');
   document.body.classList.remove('modal-open');
   modalContent.style.animation = 'slideUpModal 0.3s ease forwards';
