--- a/character.html
+++ b/character.html
@@ -120,6 +120,7 @@
     }
     .principles strong {
       user-select: none;
+      color: #00e676;
     }
     .modal {
   position: fixed;
@@ -351,6 +352,9 @@
       <i class="fa-solid fa-image"></i>
       <span>Мотивация</span>
     </div></a>
+    <a href="daily-log.html"><div class="nav-btn">
+        <i class="fa-solid fa-calendar-check"></i><span>Журнал</span>
+      </div></a>
     <a href="character.html"><div class="nav-btn active">
       <i class="fa-solid fa-shield-alt"></i>
       <span>Характер</span>
