--- a/motivation.html
+++ b/motivation.html
@@ -187,6 +187,9 @@
       <i class="fa-solid fa-image"></i>
       <span>Мотивация</span>
     </div></a>
+    <a href="daily-log.html"><div class="nav-btn">
+        <i class="fa-solid fa-calendar-check"></i><span>Журнал</span>
+      </div></a>
     <a href="character.html"><div class="nav-btn">
         <i class="fa-solid fa-shield-alt"></i>
         <span>Характер</span>
