--- a/profile.html
+++ b/profile.html
@@ -331,6 +331,9 @@
           <span>Мотивация</span>
         </div></a
       >
+      <a href="daily-log.html"><div class="nav-btn">
+        <i class="fa-solid fa-calendar-check"></i><span>Журнал</span>
+      </div></a>
       <a href="character.html"
         ><div class="nav-btn">
           <i class="fa-solid fa-shield-alt"></i>
