--- a/daily-log.html
+++ b/daily-log.html
@@ -126,7 +126,7 @@
     }
 
     .modal-content textarea {
-      width: 94%;
+      width: 90%;
       min-height: 90px;
       border-radius: 10px;
       border: 1px solid #333;
@@ -271,7 +271,7 @@
     <a href="motivation.html"><div class="nav-btn">
       <i class="fa-solid fa-image"></i><span>Мотивация</span>
     </div></a>
-    <a href="daily-log.html"><div class="nav-btn">
+    <a href="daily-log.html"><div class="nav-btn active">
         <i class="fa-solid fa-calendar-check"></i><span>Журнал</span>
       </div></a>
     <a href="character.html"><div class="nav-btn">
