--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       name="twitter:description"
       content="Твоя неделя. Твои тренировки. Твой характер. Каждый день — шаг к лучшему себе."
     />
-
+    <meta name="google-site-verification" content="QGX12iwg0rKApVGhJbN3mBITCrlPuHL-wv5zSIATy7g" />
     <style>
       * {
         box-sizing: border-box;
